@@ -1,9 +1,0 @@
-/*
-    Copyright 2010, Felspar Co Ltd. http://support.felspar.com/
-    Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
-*/
-
-
-#include "fost-datetime.hpp"
