@@ -1,5 +1,5 @@
 /*
-    Copyright 2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2010-2011, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -37,21 +37,21 @@ namespace fostlib {
     inline fostlib::json &insert(
         fostlib::json &json, const JC &p, const V &v
     ) {
-        return insert(json, fostlib::jcursor(p), fostlib::json(v));
+        return insert(json, fostlib::jcursor(p), fostlib::coerce<fostlib::json>(v));
     }
     /// Insert a value at the requested location wihin a JSON blob
     template<typename JC, typename P1, typename V>
     inline fostlib::json &insert(
         fostlib::json &json, const JC &r, const P1 &p1, const V &v
     ) {
-        return insert(json, fostlib::jcursor(r) / p1, fostlib::json(v));
+        return insert(json, fostlib::jcursor(r) / p1, fostlib::coerce<fostlib::json>(v));
     }
     /// Insert a value at the requested location wihin a JSON blob
     template<typename JC, typename P1, typename P2, typename V>
     inline fostlib::json &insert(
         fostlib::json &json, const JC &r, const P1 &p1, const P2 &p2, const V &v
     ) {
-        return insert(json, fostlib::jcursor(r) / p1 / p2, fostlib::json(v));
+        return insert(json, fostlib::jcursor(r) / p1 / p2, fostlib::coerce<fostlib::json>(v));
     }
 
 
